# C-Equation-Parser

./: CMakeLists.txt  README.md  equationparser  main.c
include/: lexer.h  parser.h  visualizer.h
src/: lexer.c  lexer.h  parser.c  visualizer.c
tests/: lexerTest.c  parserTest.c  queueTest.c  stackTest.c
utils/: queue.c  queue.h  stack.c  stack.h
